versioned_docs/version-23.1/reference/rpk/rpk-plugin/rpk-plugin-uninstall.mdx
---
title: rpk plugin uninstall
rpk_version: v23.1.6 (rev cc47e1ad1)
---

<head>
  <meta name="title" content="rpk plugin uninstall | Redpanda Docs" />
  <meta name="description" content="rpk plugin uninstall" />
  <link rel="canonical" href="https://docs.redpanda.com/docs/reference/rpk/rpk-plugin/rpk-plugin-uninstall/" />
</head>

Uninstall / remove an existing local plugin.

This command lists locally installed plugins and removes the first plugin that
matches the requested removal. If `--include-shadowed` is specified, this command
also removes all shadowed plugins of the same name. 

To remove a command under a nested namespace `rpk foo bar`, you can use `foo_bar`.

## Usage

```bash
rpk plugin uninstall [NAME] [flags]
```

## Aliases

```bash
uninstall, rm
```

## Flags

<table>
  <tbody>
    <tr>
      <td>
        <strong>Value</strong>
      </td>
      <td>
        <strong>Type</strong>
      </td>
      <td>
        <strong>Description</strong>
      </td>
    </tr>
    <tr>
      <td>-h, --help</td>
      <td>-</td>
      <td>Help for uninstall.</td>
    </tr>
    <tr>
      <td>--include-shadowed</td>
      <td>-</td>
      <td>Also remove shadowed plugins that have the same name.</td>
    </tr>
    <tr>
      <td>-v, --verbose</td>
      <td>-</td>
      <td>
        Enable verbose logging (default <code>false</code>).
      </td>
    </tr>
  </tbody>
</table>
