versioned_docs/version-23.2/reference/rpk/rpk-plugin/rpk-plugin-uninstall.mdx
---
title: rpk plugin uninstall
rpk_version: (rev )
---

<head>
  <meta name="title" content="rpk plugin uninstall | Redpanda Docs" />
  <meta name="description" content="rpk plugin uninstall" />
  <link rel="canonical" href="https://docs.redpanda.com/docs/reference/rpk/rpk-plugin/rpk-plugin-uninstall/" />
</head>

Uninstall or remove an existing local plugin.

This command lists locally installed plugins and removes the first plugin that
matches the requested removal. If `--include-shadowed` is specified, this command
also removes all shadowed plugins of the same name. 

To remove a command under a nested namespace, concatenate the namespace. For example, for the nested namespace `rpk foo bar`, use the name `foo_bar`.

## Usage

```bash
rpk plugin uninstall [NAME] [flags]
```

## Aliases

```bash
uninstall, rm
```

## Flags

<table>
  <tbody>
    <tr>
      <td>
        <strong>Value</strong>
      </td>
      <td>
        <strong>Type</strong>
      </td>
      <td>
        <strong>Description</strong>
      </td>
    </tr>
    <tr>
      <td>-h, --help</td>
      <td>-</td>
      <td>Help for uninstall.</td>
    </tr>
    <tr>
      <td>--include-shadowed</td>
      <td>-</td>
      <td>Also remove shadowed plugins that have the same name.</td>
    </tr>
    <tr>
      <td>--config</td>
      <td>string</td>
      <td>
        Redpanda or rpk config file; default search paths are
        ~/.config/rpk/rpk.yaml, $PWD, and /etc/redpanda/`redpanda.yaml`.
      </td>
    </tr>
    <tr>
      <td>-X, --config-opt</td>
      <td>stringArray</td>
      <td>
        Override rpk configuration settings; '-X help' for detail or '-X list'
        for terser detail.
      </td>
    </tr>
    <tr>
      <td>--profile</td>
      <td>string</td>
      <td>rpk profile to use.</td>
    </tr>
    <tr>
      <td>-v, --verbose</td>
      <td>-</td>
      <td>Enable verbose logging.</td>
    </tr>
  </tbody>
</table>
